--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "codecommerce",
-  "homepage": "https://suinming.github.io",
+  "homepage": "https://suinming.github.io/codecommerce",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
